# pika-8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  game.lua  game_sfx.lua  game_spr_tutor.lua  imgoinginsane.txt  main.lua  shell.html
build_scripts/: android_build.py
dependencies/glad/: glad.c  glad.h
dependencies/sol/: sol.hpp
docs/: CONTRIBUTORS.md
docs/adr/: 1-core.md  2-lua-scripting.md
docs/api/: callbacks.md  debug.md  gfx.md  input.md  sfx.md
docs/nodes/: node.md  node2d.md  ysort.md
docs/tutorial/: 1-hello_world.md  2-first_sprite.md  4-node_tree.md  5-packing.md  5-suggested_node_workflow.md  6-packing.md  7-android_and_web_building.md  7-android_building.md  temp.md
pika-android/: local.properties
pika-android/app/: build.gradle
pika-android/app/src/main/: AndroidManifest.xml
pika-android/app/src/main/java/org/libsdl/app/: SDLActivity.java
scripts/_rungame/: game_spr_tutor.lua  main.lua
scripts/enemy/: enemy.lua  enemy_spawner.lua
scripts/enemy/states/: idle.lua  state.lua
src/: async_loader.h  config.h  globals.h  main.cpp
src/data_types/: datatypes.cpp  datatypes.h  priority_queue.cpp  priority_queue.h
src/debug/: debug.cpp  debug.h  debug_struct.h  framecounter.h  plan.md
src/file_resolve/: file_system.cpp  file_system.h  zip.cpp  zip.h
src/gfx/: gfx.cpp  gfx.h  gfx_struct.h
src/gfx/sprite/: sprite.cpp  sprite.h
src/gfx/text/: text.cpp  text.h
src/json_reader/: get_config.h  json_reader.cpp  json_reader.h
src/logger/: colors.h  interface.h  log_file_save.h  log_level_str.h  proxy.h  real.h
src/lua_bindings/: engine_context.cpp  engine_context.h  lua_bind_gfx.cpp  lua_bind_input.cpp  lua_bind_node.cpp  lua_bind_sfx.cpp  lua_bindings.h  uv_utils.h
src/lua_bindings/lua_bind/: lua_bind_debug.cpp  lua_bind_gfx.cpp  lua_bind_gfx_sprite.cpp  lua_bind_input.cpp  lua_bind_node.cpp  lua_bind_sfx.cpp
src/lua_bindings/sol_bind/: sol.h  sol_bind_node.cpp  sol_bind_node2d.cpp  sol_bind_sprite.cpp  sol_bind_ysort.cpp
src/lua_bindings/table_getter/: table_gatter.cpp  table_gatter.h
src/lua_system/: lua_diagnostic_proxy.cpp  lua_diagnostic_proxy.h  lua_system.cpp  lua_system.h  lua_system_interface.h
src/memoizer/: exzmple_useage.cpp  memoizer.h
src/mobile_input/: input_state.h
src/profiler/: profiler.h
src/scene_tree/: node.cpp  node.h  node2d.cpp  node2d.h  node_factory.cpp  node_factory.h  scene_tree.cpp  scene_tree.h  y_sort.cpp  y_sort.h
src/sfx/: sfx.cpp  sfx.h
src/shader_utils/: shader_utils.cpp  shader_utils.h
src/shaders/: fragment.txt  vertex.txt
src/sprite_mesh/: mesh.cpp  mesh.h  mesh_struct.h
src/tilemap/: tilemap.cpp  tilemap.h  tilemap_stream.cpp  tilemap_stream.h
src/user_input/: key_codes.h  user_input.cpp  user_input.h
src/user_input/button/: button.cpp  button.h
temps/: imgoinginsane.txt  requiem.md
